--- a/templates/gamerate/base.html
+++ b/templates/gamerate/base.html
@@ -15,15 +15,33 @@
                 <!-- page title goes here -->
             {% endblock %}
         </title>
-
+    
     </head>
 
     <body>
+        
+        <div>
+            {% block header_block %}
+                <!-- Header and search bar goes here -->
+            {% endblock %}
+        </div>
+
+        <div>
+            {% block sidebar_block %}
+                <!-- Sidebar and categories links go here -->
+            {% endblock %}
+        </div>
 
         <div>
             {% block body_block %}
                 <!-- page content goes here -->
             {% endblock %}
+        </div>
+
+        <div>
+            {% block footer_block %}
+                <!-- footer goes here-->
+            {% block footer_block %}
         </div>
 
     </body>
