Logo added to base

--- a/templates/gamerate/base.html
+++ b/templates/gamerate/base.html
@@ -22,7 +22,8 @@
         
         <div>
             {% block header_block %}
-                <!-- Header and search bar goes here -->
+                <img src="{% static 'images/controller.PNG' %}"
+                alt="GameRate logo" />
             {% endblock %}
         </div>
 
