Added user related form. | Added registration template. | Changed some templates.

--- a/templates/gamerate/base.html
+++ b/templates/gamerate/base.html
@@ -42,7 +42,7 @@
         <div>
             {% block footer_block %}
                 <!-- footer goes here-->
-            {% block footer_block %}
+            {% endblock %}
         </div>
 
     </body>
