--- a/templates/gamerate/login.html
+++ b/templates/gamerate/login.html
@@ -5,5 +5,12 @@
 {% endblock %}
 
 {% block body_block %}
-    placeholder
+    <form id="login_form" method="post" action="{% url 'gamerate:login' %}">
+        {% csrf_token %}
+        Username: <input type="text" name="username" value="" size="64" />
+        <br />
+        Password: <input type="password" name="password" values="" size="64" />
+        <br />
+        <input type="submit" value="submit" />
+    </form>
 {% endblock %}
