--- a/templates/gamerate/register.html
+++ b/templates/gamerate/register.html
@@ -5,5 +5,16 @@
 {% endblock %}
 
 {% block body_block %}
+    <strong>Register here!</strong>
+    <form id="user_form" method="post" action="{% url 'gamerate:register' %}"
+          enctype="multipart/form-data">
 
+        {% csrf_token %}
+
+        {{ user_form.as_p }}
+        {{ profile_form.as_p }}
+
+        <input type="submit" name="submit" value="Register" />
+
+    </form>
 {% endblock %}
