--- a/templates/gamerate/base.html
+++ b/templates/gamerate/base.html
@@ -6,8 +6,11 @@
 <html lang="en">
 
     <head>
-
+        <!-- Required meta tags-->
         <meta charset="UTF-8">
+
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="css/bootstrap.min.css">
 
         <title>
             GameRate -
