--- a/templates/gamerate/register.html
+++ b/templates/gamerate/register.html
@@ -5,16 +5,19 @@
 {% endblock %}
 
 {% block body_block %}
-    <strong>Register here!</strong>
+{% if registered %}
+<strong>thank you for registering!</strong>
+{% else %}
+<register>
+    <strong>Register here!</strong><br>
     <form id="user_form" method="post" action="{% url 'gamerate:register' %}"
           enctype="multipart/form-data">
-
         {% csrf_token %}
-
+        <br> <br>
         {{ user_form.as_p }}
         {{ profile_form.as_p }}
-
         <input type="submit" name="submit" value="Register" />
-
     </form>
+</register>
+{% endif %}
 {% endblock %}
