--- a/templates/gamerate/add_category.html
+++ b/templates/gamerate/add_category.html
@@ -1,13 +1,13 @@
 {% extends 'gamerate/base.html' %}
 
 {% block title_block %}
-    Add a Game
+    Add a Category
 {% endblock %}
 
 {% block body_block %}
-    <h1>Add a Game</h1>
+    <h1>Add a Category</h1>
     <div>
-      <form id="game_form" action="/gamerate/add_game/" method="post">
+      <form id="category_form" action="/gamerate/add_category/" method="post">
         {% csrf_token %}
         {% for hidden in form.hidden_fields %}
           {{hidden}}
@@ -18,7 +18,7 @@
           {{ field }}
           <br>
         {% endfor %}
-        <input type="submit" name="submit" value="Create Game" />
+        <input type="submit" name="submit" value="Create Category" />
       </form>
     </div>
 {% endblock %}
