--- a/templates/gamerate/my_account.html
+++ b/templates/gamerate/my_account.html
@@ -7,3 +7,18 @@
 {% block body_block %}
     placeholder
 {% endblock %}
+
+{% block sidebar_block %}
+{% if categories %}
+<ul>
+  {% for category in categories %}
+  <li>
+    <a href="{% url 'gamerate:show_category' category.slug %}">{{ category.name}}</a>
+  </li>
+  <br>
+  {% endfor %}
+</ul>
+{% else %}
+<strong> There are no categories present.</strong>
+{% endif %}
+{% endblock %}
