--- a/templates/gamerate/base.html
+++ b/templates/gamerate/base.html
@@ -27,10 +27,10 @@
                 <ul>
                   {% if user.is_authenticated %}
                   <li>Username: {{request.user.username}}</li>
-                  <li><a href="/gamerate/logout/">Logout</a></li>
+                  <li><a href="{% url 'gamerate:home' %}">Logout</a></li>
                   {% else %}
                   <li><a href="{% url 'gamerate:register' %}">Register </a></li>
-                  <li><a href="/gamerate/login/">Login </a></li>
+                  <li><a href="{% url 'gamerate:login' %}">Login </a></li>
                   {% endif %}
                 </ul>
               </topbar>
@@ -39,12 +39,12 @@
       <div>
         <nav>
           <ul>
-            <li><a href={% url 'gamerate:home' %}>Home </a> </li>
-            <li><a href="/gamerate/most-popular/">Most Popular </a></li>
+            <li><a href="{% url 'gamerate:home' %}">Home </a> </li>
+            <li><a href="{% url 'gamerate:most_popular' %}">Most Popular </a></li>
             {% if user.is_authenticated %}
             <li><a href="#">Favourites</a></li>
-            <li><a href="/gamerate/add_game/">Add a New Game</a></li>
-            <li><a href="/gamerate/add_category/">Add a New Category</a></li>
+            <li><a href="{% url 'gamerate:add_game' %}">Add a New Game</a></li>
+            <li><a href="{% url 'gamerate:add_category' %}">Add a New Category</a></li>
             {% endif %}
             <li><a href="/gamerate/contact-us/">Contact Us </a></li>
           </ul>
