--- a/static/css/style.css
+++ b/static/css/style.css
@@ -118,7 +118,7 @@ gamepagecontent {
   display: inline-grid;
   font-size: 120%;
 
-  width: 500px;
+  width: 50%;
   padding: 50px;
   border: 5px solid gray;
   margin: 0;
@@ -129,6 +129,14 @@ gamepage img{
   padding: 5px;
   width: 250px;
 }
-register{
+reviews{
+  display: inline-block;
+  font-size: 120%;
+  text-decoration: none;
+  padding-right: 50px;
 
+  width: 20%;
+  padding: 50px;
+  border: 5px solid gray;
+  margin: 0;
 }
